--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ python-socketio==5.13.0
 eventlet==0.35.2
 dnspython==2.6.0
 bidict==0.22.1
+python-engineio>=4.11.0
+greenlet==3.0.3
+gevent==24.2.1
+gevent-websocket==0.10.1
+redis==5.0.3
+itsdangerous==2.2.0
