--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Werkzeug==3.1.3
 flask-socketio==5.5.1
 python-socketio==5.13.0
 eventlet==0.35.2
+aiortc==1.5.0
+aioice==0.9.0
 dnspython==2.6.0
 bidict==0.22.1
 python-engineio>=4.11.0
